--- a/beliccia/index.html
+++ b/beliccia/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/isotipo" href="imagenes/isotipo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beliccia.dresscode.es</title>
   </head>
