--- a/beliccia/index.html
+++ b/beliccia/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- index.html -->
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
