--- a/beliccia/index.html
+++ b/beliccia/index.html
@@ -2,13 +2,14 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
+    <link rel="preload" as="image" href="/hero-poster.webp" fetchpriority="high" />
     <link rel="icon" type="image/isotipo" href="imagenes/isotipo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beliccia.dresscode.es</title>
   </head>
   <body>
     <div id="root"></div>
-    <!-- index.html -->
+    
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
